# CoreSupport

./: .dockerignore  .env.template  .gitignore  Dockerfile  dev-restart.sh  docker-compose.yml  frontend_tz.md  pyproject.toml
src/: .env.template
src/alembic/: env.py
src/alembic/versions/: 668317f018fe_initial_models.py
src/backend/: main.py  requirements.txt
src/backend/api/: __init__.py
src/backend/api/api_v1/: __init__.py  agent.py  auth.py  chat.py  task.py  users.py
src/backend/api/dependencies/: tasks.py  users.py
src/backend/api/dependencies/authentication/: access_tokens.py  users.py
src/backend/core/: config.py
src/backend/core/authentication/: fastapi_users.py  user_manager.py
src/backend/core/models/: __init__.py  access_token.py  base.py  db_helper.py  task.py  user.py
src/backend/core/schemas/: task.py  user.py
src/backend/services/: agent.py  task.py
src/backend/utils/: __init__.py
src/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
src/frontend/src/: middleware.ts
src/frontend/src/app/: globals.css  globals.scss  layout.tsx  page.tsx
src/frontend/src/app/(public)/: page.module.scss  page.tsx
src/frontend/src/app/dashboard/: page.tsx
src/frontend/src/app/engineers/: page.tsx
src/frontend/src/app/login/: page.module.scss  page.tsx
src/frontend/src/entities/engineer/: index.ts
src/frontend/src/entities/ticket/: index.ts
src/frontend/src/entities/vm/: index.ts
src/frontend/src/features/assign-task/: index.ts
src/frontend/src/features/create-ticket/: index.ts
(+62 files in other folders)
