[project]
name = "coresupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "fastapi>=0.135.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "openai>=2.30.0",
]
